--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "chart.js": "^4.4.0",
     "datatables.net": "^1.11.3",
     "datatables.net-bs5": "^1.11.3",
     "jquery": "^3.7.1",
@@ -41,6 +42,7 @@
     "@angular-devkit/build-angular": "^16.2.1",
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/chart.js": "^2.9.41",
     "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.25",
